2007-11-19  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/rubygems_version.rb: 0.9.5.

2007-11-16  Eric Hodel  <drbrain@segment7.net>

	* test/gemutilities: Add a legacy platform gem to the default test
	gems list.
	* lib/rubygems/specification.rb: Add Gem::Specification#original_name
	for legacy purposes
	* lib/rubygems/indexer.rb: Use #original_name to make the indexer
	backwards compatible.
	* lib/rubygems/master_index_builder.rb: Reduce memory consumption.

2007-11-13  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/rubygems_version.rb: 0.9.4.7 beta.
	* lib/rubygems.rb: Patch for RUBY_FRAMEWORK for OS X 10.5.  Patch
	submitted by Laurent Sansonetti.
	* lib/rubygems.rb: cygwin, djgpp, mingw are Windows platforms.  Fixes
	bug #15537 by Roger Pack.

2007-11-11  Eric Hodel  <drbrain@segment7.net>

	* Rakefile: Tasks for maintaining ruby trunk export of RubyGems.
	* lib/rubygems/specification.rb: Preserve original platform across
	serialization.
	* lib/rubygems/dependency_installer.rb: Retry with original platform
	name on fetch error.

2007-11-09  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb: Set #original_platform only once.
	* lib/rubygems/indexer.rb: Handle legacy platforms.
	* lib/rubygems/platform.rb: Gem::Platform is a valid argument.  Bug
	#15511 submitted by Daniel Berger.
	* lib/rubygems/custom_require.rb: Fix compatibility with 1.8.2.  Bug
	#14933 submitted by Aaron Patterson.
	* lib/rubygems/command.rb: Now '-V' enables verbose.  Bug #14951
	submitted by Sasa Ebach.
	* lib/rubygems/commands/check_command.rb: Change use of '-v', '-V' to
	match above.
	* lib/rubygems/package.rb: #send! is gone again.
	* lib/rubygems.rb: Don't add custom_require for 1.9.
	* test/*: Make compatible with 1.9 import.

2007-10-30  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb: Don't re-use @platform to maintain
	backwards compatibility.
	* lib/rubygems/platform.rb: Handle nil and 'ruby' platforms in ::new.
