@@ -1,3 +1,7 @@
+2007-11-20  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems/platform.rb: Handle bare 'mswin32' platform's CPU.
+
 2007-11-19  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems/rubygems_version.rb: 0.9.5.
